[package]
name = "itinerarium"
version = "0.0.1"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
correlation = ["uuid"]


[dependencies]
hyper = "0.13"
hyper-native-tls = "0.3.0"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
async-trait = "0.1.41"

serde_json = "1.0.59"
dyn-clone = "1.0.3"

log = "0.4.11"
simple_logger = "1.11.0"

uuid = { version = "0.8", features = ["serde", "v4"], optional = true }
