[package]
name = "itinerarium"
version = "0.0.1"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = "0.13"
hyper-native-tls = "0.3.0"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = [ "rt-core", "net", "time", "macros" ] }
futures = { version = "0.3.8", default-features = false, features = ["std"] }
async-trait = "0.1.42"

log = "0.4.11"
simple_logger = "1.11.0"

[dev-dependencies] # or example-dependencies
serde_json = "1.0.63"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.7.3"