[package]
name = "itinerarium"
version = "0.0.1"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = [ "full" ] }
futures = { version = "0.3.21", default-features = false, features = ["std"] }
async-trait = "0.1.42"

log = "0.4.11"
simple_logger = "1.11.0"

[dev-dependencies] # or example-dependencies
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"